# ChangeLog for media-video/smplayer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/smplayer/ChangeLog,v 1.145 2014/09/24 07:33:47 yngwin Exp $

*smplayer-14.9.0 (24 Sep 2014)

  24 Sep 2014; Ben de Groot <yngwin@gentoo.org> +smplayer-14.9.0.ebuild:
  version bump

  28 Apr 2014; Fabian Groffen <grobian@gentoo.org> smplayer-14.3.0.ebuild:
  Fix for Prefix, by Matthias Maier in bug #507724

  18 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> smplayer-14.3.0.ebuild:
  Another attempt to fix USE-flag dependencies for mplayer and mplayer2.

  13 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> smplayer-14.3.0.ebuild:
  Attempt to fix installation with mplayer2 (bug #507588).

*smplayer-14.3.0 (12 Apr 2014)

  12 Apr 2014; Lars Wendler <polynomial-c@gentoo.org> +smplayer-14.3.0.ebuild:
  Version bump (bug #506578).

*smplayer-0.8.6 (18 Aug 2013)

  18 Aug 2013; Ben de Groot <yngwin@gentoo.org> +smplayer-0.8.6.ebuild:
  Version bump, bug #481424. Drop quazip dep and patch, as that is no longer
  used.

*smplayer-0.8.5-r1 (07 Aug 2013)

  07 Aug 2013; Ben de Groot <yngwin@gentoo.org> +smplayer-0.8.5-r1.ebuild:
  Turn off update checker (bug #479902); prefer mplayer over mplayer2 again,
  since the latter is unmaintained

  04 Jul 2013; Michael Palimaka <kensington@gentoo.org> -smplayer-0.8.3.ebuild,
  -smplayer-0.8.4-r1.ebuild:
  Remove old.

  04 Jul 2013; Jeroen Roovers <jer@gentoo.org> smplayer-0.8.5.ebuild:
  Stable for HPPA (bug #475100).

  04 Jul 2013; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.5.ebuild:
  Stable for x86, wrt bug #475100

  28 Jun 2013; Agostino Sarubbo <ago@gentoo.org> smplayer-0.8.5.ebuild:
  Stable for amd64, wrt bug #475100

*smplayer-0.8.5 (25 May 2013)

  25 May 2013; Ben de Groot <yngwin@gentoo.org> +smplayer-0.8.5.ebuild,
  -smplayer-0.8.4.ebuild:
  Version bump, bug #469368. Remove older version with broken icons.

*smplayer-0.8.4-r1 (03 May 2013)
