@@ -3,32 +3,29 @@ Hash: SHA256
 
 AUX smplayer-0.8.0-quazip.patch 2915 SHA256 ac1e7f6301d14df624c13219397958d2f5ebee3c3f89f46cc9651e9413548bd2 SHA512 a642720f4db2a705ef6380212c6658a8ef34ec34319e575630750b614516f430ce91d40a47989980e695f9e0e6ada031da3ea8608e16c11112e94d5b8ccb6503 WHIRLPOOL b055fa4c97da7505a66e9b4061e0fce4609dc0f68691670cacdd9890cfa68098df11b1ae66ed153ba1c47e58f5786bee4ab4a4fdbf261eca17bcc43f9b722383
 DIST smplayer-0.8.5.tar.bz2 3343452 SHA256 3c772738bbd4da2f5ff0e28408dab57dbf3fcdebc9d58097da45b0f2b0da6e6d SHA512 88d2941a5dc425604ef693c61d74c4bb3895df30e26a03c916bc27f57d2f8ee1af102bab69418a367171c28bda9d0a692d40744b1b3dd11340935dc51365fa2e WHIRLPOOL bf86fec5bd91a62bbd5d392983368d5a88cbcbac8da54db1031c5f1111a4b5347a5e354405997de22f9b8793b1653853dbc1ddf461948260d527bb1b5a5bcad2
-DIST smplayer-0.8.6.tar.bz2 3336444 SHA256 e091339977fbd0de5a04b782295326977fe4bb644bef8e5f252c5f249348e0dc SHA512 d0f43621e7f1cb5de6d428b4e56276123ad4c8cdee80d0788f3e5670133991cf5a04a4c7bdae867e89b0eeaf1b0a4a0f6f3972d89b26a2512e45aa0da3beb664 WHIRLPOOL dcdec1d4d13e89fd999e9989d5f4e17849b0264062817a71940c7ca92ed854ac9b05aa57d3437e460a9f5d0a797c73a13c121ff3a9cd63dee9dbc13cf3ff4498
 DIST smplayer-14.3.0.tar.bz2 3675657 SHA256 9b8db20043d1528ee5c6054526779e88a172d2c757429bd7095c794d65ecbc18 SHA512 11ccb390b220a8cf978f9059ed04871c68d91db2a234b7d42a695e17d2bc1ff108d0696439fc148637a5af6d9189fc19cf51dad581c6f59fe84361aa49db4faa WHIRLPOOL 6702e140527c95f5dc284c29fe6e49ac16b01af8162393f20d53ca7124abc9420d20ad3e704f7da79dc5e4341f282ab0ab48389f45dc3e481d2a76f19ea32180
 DIST smplayer-14.9.0.tar.bz2 3716434 SHA256 429ad4edd6df1fcedd5ea4fa2b024eb5a61c9412f52762e9d9a9c2245b7ddf13 SHA512 78cecdad7e5f18c221a2f08a0472da01eb14db6230733616b805b6fccf2929c3f5b4dd92fd037362890a308967fa6602b89318c5376c3ce3a38d0dd9a1a17e43 WHIRLPOOL d7e621cd9ebcee450ce7aa9beaf1240c3d2f91271d2a6f043688c8688d77e8ad4761777a05ae77230966d050d647e700aa5bc8d3b566adc3fb724eaf9e315399
-EBUILD smplayer-0.8.5-r1.ebuild 2403 SHA256 86fd7ff68a79da8670ae548cf74057dc94806bebbdc26baeda7593a1e5742091 SHA512 a34fdd79c64c4c2cca385b931fc30d984b10f9eedd76f0733c40edefe1472e1c72f1aac83408eecaebde01653d616d1cb8ca9889bcc01e3fc25727fcac48291e WHIRLPOOL 83d2815c8d7be56fdebe634e14d9a32878021e143d650861e8d1aa9a5c743905780dedac47e3f3fcc4a194d25c4f49c698118966b86c656eb8c8ad451aa4e99d
 EBUILD smplayer-0.8.5.ebuild 2229 SHA256 67b32d5e7859cb37bd292623069b4755f75eea6bcb8b1c4d25d2a7ebbcef452e SHA512 91ae54bbfc988f3a3849a842703a10f0e285d996a2b32c94798e447e7eabfeeb4cc57f80fad5a63431191668e786e84ef8c0371a20618e270ceb56c181a1f2b9 WHIRLPOOL 5fcb3e80049eca41e6ee82e041321ee29ad8ef2e96e2e2806af50c59506899cc781c03756f4f139c9b01165a5994232c5a1595c9b8d506de549fc18cb6f0cd8d
-EBUILD smplayer-0.8.6.ebuild 2270 SHA256 a2a8eaa889cf1adc8d5c1507a518ebe890f37881222030923bfd1184dd001f6c SHA512 646bc1d520e1d7582344e575e00aa9911f76b584f3f858769da9a7081e0b306779843c7890125ab77753569b2994d6ce529f256172d23f78b9ac9a31933ad401 WHIRLPOOL 0dda3731333b4657be40d53c554182d150287f231544b42ae6b892326c26d50c713365feb80049dff7b04ceb6962c1559dfcd017e9cad88eeda75740ddfa2191
 EBUILD smplayer-14.3.0.ebuild 2163 SHA256 d0a479c240eec62222734ea04daea96600e62e09eb0dad8f02132549bddce568 SHA512 2bc370e16eb7708f2a38f57a70049f00777ff32e9f286bbf7ab2caa2d3cea73bb73563c12b0d0ded9ae5a447ec8b1caf8b232246a6631497908ce5c5ab69fb80 WHIRLPOOL 03a9c2a06a80130ba2c01fae52c442c034594eae943d9cd47e37b0660c5b7e170ba582ed89961191253bbc4959c457cbb0d09b570d6e429f24847af17bff196d
 EBUILD smplayer-14.9.0.ebuild 2162 SHA256 b9ec3094e9b3c9b4ddfd9a8ff21ae265f3786d34767817569173e8349499a71c SHA512 a282973d2a281f9fc1ef6268a5f1fe806555503d13ce24a200c9ce432a0a0cca774c1bab5a9ac87d00e93994e4308d523145cce593c7bb5074232addb6c7ea6e WHIRLPOOL 0b93593b95cc3900c77ff2874956da7da41b2d77399356ac8c197fd1c7e1178727150e0d7df6b8e76a5ee1ecf68f9e5999e697b6a69c8f0c12fc6871bbe1bc19
-MISC ChangeLog 19978 SHA256 293b553667b76a96409400036b7d53a8130d65feae7b18254300c429f4e42693 SHA512 069a1266b7a4b393b988cd646c2f1bc18bf41e687dac7a5cfa317e02599996598b4f3bee8384680113841851bd68b6c6a25c95cbf52ceb6392e8210d2f1471ba WHIRLPOOL 7e25382ddf49f94281a233914557eb938551b92a39c1934be8326a91e65afb585ae163d4ec4c21e804cbcf54e18b1a483306b80b0c92c6dd4c42623582f3ee31
+MISC ChangeLog 20086 SHA256 2102e36dbf6672e751f8b79f783ba14d64fb15af5aebcb3ab5463b5e708a71cd SHA512 a3b8896802adad5ee29e8e5e02a7b13ea06408ea70a5bdbeb9d45e91eef0ab9e09f998510d9c68cd38ada23950ffee964caa18191b9bf406d9e1d8ce85531eaf WHIRLPOOL c5fd4422ffc5486cc88c0368ebcc26e4ae9cb51ccd2bb6e16cf5a120717940aad37a59c19dad13e9294747a6843b2f7a157f90ae8db03ae9d3d57ec22f822786
 MISC metadata.xml 174 SHA256 89d4f3510de4db0434e0b3794ed9bef3e603217ca0cb195d3e817c208239f6fa SHA512 bc396506ea847d6a36e400a86b8a575a46d075da58b57a4b085e12ac242e210a7a55c4e8b3da567b97c0e5a8bfc682bb5546b3b657c2f92f6fa00da674bb7062 WHIRLPOOL 0e82e9ab352222683df9da1682d9cc03d2123786218c74f31ac487417100408cd5737aac3355e96f68388ddba76b3a1ea2f4bcf50fd4ec55c87fb6bfd20a5fee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJUInPiXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyOTZFRkUxOEEyRDM1Qzc2QTY0M0Y2QjQw
-RjlDNTkwQjdGRjMyNEY2AAoJEA+cWQt/8yT21d4QAL+nPxz2Y60oR6RvXH3HI5wq
-jUWM31YzBoqIpmc8zl+4YtHCoQBCZZLE24TFX05eLCBCM0ulVAmKD1mA7fkEb4zE
-v0FB7imRWjJ87j9lyAVrnyjUlU8kKRG7bSiRRRkCLmIFaJGvMcQd+ltQeK/zBCh1
-97E3+Sk0Fao50a6p6v89SgvayKp7npLXsy4UWMccnIGeKJG+1udp5OZ+OnZSJRp3
-Ts0CJcVPTXHvgbpTk6n6qrMfLDFOcKJ24HGh/AuibpVqQraeCFdPiJ5kaqSAB70b
-TXCBlOR/r7V4QVglUpIz3eAffoIU8ubeoDqwKDByhnh37NZKNJ6o+D1PvF+ETl1x
-KMdmYMmLw24df5iUZL8Tl207PXwCTXQkdMulPhZXcqerDbQi3UWsQsDfhuH7NO2d
-q0t1xWmG8JR24jPPFu7sVVFxg898lW9mOxGDfP0Ti8jCK5Z+1Q5ASNPE6jgyUQJr
-ILiZUf9DbB34WYcHHU+CSzFC4X0pXCF09Au+ZmVx9B1uIaHbrfcJ3u4UOfmSstwh
-mYnUvVLQezXwRBCxOnFTmfaAr5syKmFy63idrokHP1I0IKZ5cwUhXhUOuwkxCNWN
-XHaK2zxgRUeMTcDkISv+y4ox3w6gpgv54HH3qASwlF8WRutJkI4Bynn8Oa1v/7mb
-YE0C5p/zffol5XSoIRIq
-=4X9Q
+iQJ8BAEBCABmBQJUI1SuXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9crMP/1JJm+CoWqJsi6lv/scJO3Lx
+Z4/bXG6d61nQd+/VNZB/u+9TKXAVwwb14+4lAKAXYn3T9JFW9+lzUQAfdoYF4mHw
+7OCJI5RjsiUFMXEZEl0j3u5X7yVKNjdukJxJSSPx3stkgDKvf2OWIZmfyu58iOJ3
+jwEJY+bt7XTXAaIA5d0KbEFgU8FfFSM6FlyEKDaCJqRv56j2mD/3H2+op9cg49q3
+XBfj8lNcwJJJsA8uORZgkqn1g0L5DESaKoIIKFQ6qTTF+3/GrJ3Jrvp5tFcF8rST
+KDvITK5IjtbbgUaoV4xEmBPNJUfm2OJvhwIrSq9Zh8S4CQbPNF3/Jz/uBKamsFgu
+W/aHcKHBUgrOLb0clmgj+HuGGjGxcb+X+gBDJtk4dKEMLA1qm+nwdCmGUX6SQy/E
+kOlVn850WoSTNK2bo/VwxbrlXQmWKJR+QeuLKjBRC7j96LwLWi1d2+QLIbRMO1mq
+cpgAHc0JOSpgsQMDpyzXVud760g7N4qqERL9Yz0Wh8MRff9hZRvzQhiTmPB744l/
+XdD/3AyyQL6mzN0qhydW7xzVLHsl8bnSJqEXPR/uHtbfa5rYG5PgCk+n6Xvbh/Qw
+1452/uhrHkhQW75gWDMxg+URsuztgQ3fss8UeapcDTVFYtdyWrPHSJsquJzEvTKI
+eanoho/FCz2tRw54mm8C
+=E6Zl
 -----END PGP SIGNATURE-----
